[gd_scene load_steps=2 format=3 uid="uid://3vctrcckf8dt"]

[ext_resource type="Script" path="res://GUIScripts/LevelEditorMenu.gd" id="1_winig"]

[node name="LevelEditorUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_winig")

[node name="ExitBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 99.0
offset_right = 46.0
offset_bottom = 130.0
text = "Exit"

[node name="RunBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 47.0
offset_bottom = 39.0
text = "Run"

[node name="SaveBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 55.0
offset_right = 50.0
offset_bottom = 86.0
text = "Save
"

[node name="PlaceSpawnPointBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 603.0
offset_right = 151.0
offset_bottom = 634.0
text = "Set Spawn Point
"

[node name="BoardGameDimensions" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SetBoardSizeBtn" type="Button" parent="BoardGameDimensions"]
layout_mode = 0
offset_left = 607.0
offset_top = 596.0
offset_right = 725.0
offset_bottom = 627.0
text = "Set Board Size"

[node name="BoardRowsLbl" type="Label" parent="BoardGameDimensions"]
layout_mode = 0
offset_left = 185.0
offset_top = 604.0
offset_right = 277.0
offset_bottom = 627.0
text = "Board Rows"

[node name="BoardColumnsLbl" type="Label" parent="BoardGameDimensions"]
layout_mode = 0
offset_left = 377.0
offset_top = 601.0
offset_right = 496.0
offset_bottom = 624.0
text = "Board Columns"

[node name="BoardRowsTxt" type="TextEdit" parent="BoardGameDimensions"]
layout_mode = 0
offset_left = 294.0
offset_top = 604.0
offset_right = 343.0
offset_bottom = 628.0

[node name="BoardColumnsTxt" type="TextEdit" parent="BoardGameDimensions"]
offset_left = 517.0
offset_top = 599.0
offset_right = 566.0
offset_bottom = 623.0

[node name="SetBoardSizeLbl" type="Label" parent="BoardGameDimensions"]
layout_mode = 0
offset_left = 742.0
offset_top = 597.0
offset_right = 807.0
offset_bottom = 620.0

[connection signal="pressed" from="ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="RunBtn" to="." method="_on_run_btn_pressed"]
[connection signal="pressed" from="SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="BoardGameDimensions/SetBoardSizeBtn" to="." method="_on_set_board_size_btn_pressed"]
